# ExtendingHarrisAndSIFT

./: .gitmodules  README.md  generate_figures.py  main.py  parameter_tuning.py  playground.py  pyproject.toml  run_all.py  run_full_evaluation.py
data/: generate_sample.py
data/Pointcloud/: generate_real.py  generate_synthetic.py  visual_test.py
data/Pointcloud/real/: armadillo.ply  bunny.ply  eagle.ply  fragment.ply
data/Pointcloud/synthetic/: cone.ply  cube.ply  cuboid.ply  cylinder.ply  pyramid.ply  sphere.ply  sphere_noisy.ply  torus.ply
data/Voxel/: generate_synthetic.py
data/Voxel/synthetic/: cube.npy  cylinder.npy  pyramid.npy  sphere.npy
data/synthetic/: cone.npy  cube_noisy.ply  cuboid.npy  torus.npy
demos/: harris_pc_joint_sensitivity.py  sift3d_walkthrough.py  sift_pipeline.py
notebooks/: demo_pc.ipynb  demo_voxel.ipynb
outputs/evaluation/: real_sample_results.json
outputs/evaluation/harris3d/: quantitative_report.json
outputs/evaluation/harris_pc/: quantitative_report.json
outputs/evaluation/sensitivity/: harris3d_sensitivity.csv  harris_pc_sensitivity.csv  sift3d_sensitivity.csv  sift_radii_pc_sensitivity.csv  sift_voxel_pc_sensitivity.csv
outputs/evaluation/sift3d/: quantitative_report.json
outputs/evaluation/summary/: summary_metrics.md  (+1 more)
src/common/: __init__.py  base_detector.py  io.py  metrics.py  par  visualization.py
src/evaluation/: build_quantitative_tables_plots.py  evaluate_pc.py  evaluate_voxel.py  plots.py
src/pointcloud/: harris_pc.py  params.py  sift_pc.py
src/voxel/: harris3d.py  params.py  sift2d.py  sift3d.py
(+11 files in other folders)
