[project]
name = "extendingharrisandsift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.5",
    "napari>=0.5.0",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pyqt5>=5.15.0",
    "scipy>=1.10.0",
]
